--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <body>
     <div class="wrapper">
         <h1>Thomas Paul Mann</h1>
+        <p>I'm an engineer.<p>
         <p></p>
-        <p class="view"><a href="https://github.com/thomas-mann">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/thomas-mann">GitHub</a></p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
