Update link to github profile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Thomas Paul Mann</h1>
         <p>I'm an engineer.<p>
         <p></p>
-        <p class="view"><a href="https://github.com/thomas-mann">GitHub</a></p>
+        <p class="view"><a href="https://github.com/thomaspaulmann">GitHub</a></p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
