Keep it simple stupid

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="wrapper">
         <h1>Thomas Paul Mann</h1>
-        <p>&lt;I'm a Software Engineer&gt;<p>
+        <p>I'm an Engineer.<p>
         <p></p>
         <p class="view"><a href="https://github.com/thomaspaulmann">GitHub</a></p>
     </div>
