--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>Thomas Paul Mann</h1>
         <p>I'm an Engineer.<p>
         <p></p>
-        <p class="view"> <a href="https://github.com/thomaspaulmann">GitHub</a> &bull; <a href="https://twitter.com/thomaspaulmann">Twitter</a></p>
+        <p class="view"> <a href="https://github.com/thomaspaulmann">GitHub</a> - <a href="https://twitter.com/thomaspaulmann">Twitter</a></p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
