Use bulletin as link separator

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>I'm an Engineer.<p>
         <p></p>
         <p class="view"><a href="mailto:hello@thomaspaulmann.com">Email</a> 
- - <a href="https://github.com/thomaspaulmann">GitHub</a> - <a href="https://twitter.com/thomaspaulmann">Twitter</a></p>
+ &bull; <a href="https://github.com/thomaspaulmann">GitHub</a> &bull; <a href="https://twitter.com/thomaspaulmann">Twitter</a></p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
