--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <!-- HEAD -->
   <head>
-    
+
     <!-- Meta infos -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -18,6 +18,10 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="stylesheets/styles.css">
 
+    <!-- Scripts -->
+    <script src="javascripts/jquery.min.js"></script>
+    <script src="javascripts/parallax.js"></script>
+
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,10 +32,13 @@
       ga('create', 'UA-71090825-1', 'auto');
       ga('send', 'pageview');
     </script>
-
   </head>
 
   <!-- CONTENT -->
-  <pre><script src="javascripts/print.js"></script></pre>
+  <section class="landing">
+    <h1>Thomas</h1>
+  </section>
+
+  <section class="content"/>
 
 </html>
