--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/font-hack/2.018/css/hack.min.css">
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
 
     <!-- Scripts -->
@@ -35,10 +36,10 @@
   </head>
 
   <!-- CONTENT -->
-  <section class="landing">
+  <section class="landing_container">
     <h1>Thomas</h1>
   </section>
 
-  <section class="content"/>
+  <section class="content_container"/>
 
 </html>
