Add simple logo

--- a/index.html
+++ b/index.html
@@ -35,11 +35,18 @@
     </script>
   </head>
 
-  <!-- CONTENT -->
-  <section class="landing_container">
-    <h1>Thomas</h1>
-  </section>
+  <body>
+    <section class="logo_container">
+      <h1>Thomas</h1>
+      <h1>Paul</h1>
+      <h1>Mann</h1>
+    </section>
 
-  <section class="content_container"/>
+    <!-- CONTENT -->
+    <section class="landing_container">
+      <h2>Thomas</h2>
+    </section>
 
+    <section class="content_container"/>
+  </body
 </html>
