Revert "Rename containers"
fc476cea397d2fbf26b45510f20223627aa9f668

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/font-hack/2.018/css/hack.min.css">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
 
     <!-- Scripts -->
@@ -36,10 +35,10 @@
   </head>
 
   <!-- CONTENT -->
-  <section class="landing_container">
+  <section class="landing">
     <h1>Thomas</h1>
   </section>
 
-  <section class="content_container"/>
+  <section class="content"/>
 
 </html>
