--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
-
   <!-- HEAD -->
   <head>
-
     <!-- Meta infos -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -19,29 +17,24 @@
     <!-- Scripts -->
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/parallax.js"></script>
-
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-71090825-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
 
   <body>
+    <!-- Landing -->
     <section class="landing_container">
+      <svg class="arrow">
+      		<polyline points="5,5 30,25 55,5" stroke="#fff" stroke-width="5" fill="none"/>
+      	</svg>
     </section>
 
+    <!-- Logo -->
     <div class="logo_container">
       <h1>Thomas</h1>
       <h1>Paul</h1>
       <h1>Mann</h1>
     </div>
 
+    <!-- Content -->
     <section class="content_container">
       <div id="fade_out"></div>
       <div id="content">
@@ -52,6 +45,7 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <section class="footer_container">
       <a href="imprint.html">Imprint</a>
     </section>
