Add scroll down to content animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Scripts -->
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/parallax.js"></script>
+    <script src="javascripts/scroll.js"></script>
   </head>
 
   <body>
