Add contact container for quick access

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       <h1>mann</h1>
     </div>
 
+    <!-- Contact -->
+    <div class="contact_container">
+      <a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a>
+    </div>
+
     <!-- Content -->
     <section class="content_container">
       <div id="content">
