--- a/index.html
+++ b/index.html
@@ -23,37 +23,34 @@
 
     <div class="left">
       <div class="logo">
-        <h1>thomas</h1>
-        <h1>paul</h1>
-        <h1>mann</h1>
+        <h2>thomas</h2>
+        <h2>paul</h2>
+        <h2>mann</h2>
       </div>
 
       <div class="contact">
-        <a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a>
+        <h2><a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a></h2>
       </div>
     </div>
 
     <div class="right">
+      <section class="intro">
+        <h1>i'm a software engineer who want to make software great again</h1>
+      </section>
+
       <section>
-        <p>i'm a software engineer who want to make software great again</p>
+        <p>i've done a lot of things ranging from rapid prototyping to agile project management to designing entire apps to ship products with continuous integration to blogging and rocking great music as a dj (rip <a href="http://www.wohlwill.me">wohlwill</a>).</p>
+        <p>i'm currently working as a software engineer and function owner at <a href="http://www.audi.de">audi ag</a>. previously i've worked for <a href="http://www.prosiebensat1.de">prosiebensat.1 digital gmbh</a> as a software engineer for mobile computing, as a research assistant at <a href="http://www.isst.fraunhofer.de">fraunhofer institute for software and system technology</a> and as a specialist at <a href="http://www.apple.com">apple retail</a>.</p>
+        <p>i've founded <a href="http://pfiffundweg.de">pfiff & weg</a> - a social system to keep cities clean - and <a href="http://designprof.net">designprof</a> - a bundle of apps that helps people designing their business papers. furthermore i'm working on <a href="https://github.com/ProtiumLabs">protium</a> - a mobile first software architecture - and <a href="https://github.com/PowerOfEmojis">power of emojis</a> - a bundle of apps that simplifies ui with emojis.</p>
+        <p>feel free to say <a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a>, fork my <a href="https://github.com/thomaspaulmann">code</a>, share my <a href="https://twitter.com/thomaspaulmann">news</a> and like my <a href="https://www.instagram.com/thomaspaulmann/">photos</a>.</p>
+      </section>
+
+      <section class="footer">
+        <p><a href="imprint.html">imprint</a></p>
       </section>
     </div>
 
-<!--
-<section>
-  <p>i've done a lot of things ranging from rapid prototyping to agile project management to designing entire apps to ship products with continuous integration to blogging and rocking great music as a dj (rip <a href="http://www.wohlwill.me">wohlwill</a>).</p>
-
-  <p>i'm currently working as a software engineer and function owner at <a href="http://www.audi.de">audi ag</a>. previously i've worked for <a href="http://www.prosiebensat1.de">prosiebensat.1 digital gmbh</a> as a software engineer for mobile computing, as a research assistant at <a href="http://www.isst.fraunhofer.de">fraunhofer institute for software and system technology</a> and as a specialist at <a href="http://www.apple.com">apple retail</a></p>
-
-  <p>i've founded <a href="http://pfiffundweg.de">pfiff & weg</a> - a social system to keep cities clean - and <a href="http://designprof.net">designprof</a> - a bundle of apps that helps people designing their business papers. furthermore i'm working on <a href="https://github.com/ProtiumLabs">protium</a> - a mobile first architecture - and <a href="https://github.com/PowerOfEmojis">power of emojis</a> - a bundle of apps that simplifies ui with emojis.</p>
-
-  <p>feel free to say <a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a>, fork my <a href="https://github.com/thomaspaulmann">code</a>, share my <a href="https://twitter.com/thomaspaulmann">news</a> and like my <a href="https://www.instagram.com/thomaspaulmann/">photos</a>.</p>
-</section>
-
-    <footer>
-      <a href="imprint.html">imprint</a>
-    </footer>
-  -->
-
 </body>
+
+
 </html>
