--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="right">
       <section class="intro">
-        <h1>i'm a software engineer who want to make software great again.</h1>
+        <h1>i'm a software engineer who wants to make software great again.</h1>
       </section>
 
       <section>
