--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <h2>mann</h2>
       </div>
 
-      <div class="contact">
+      <div class="menu">
         <h2><a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a></h2>
+        <h2><a href="data/CV_ThomasPaulMann.pdf">cv</a></h2>
       </div>
     </div>
 
