--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height" >
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 
     <title>Thomas Paul Mann</title>
 
