--- a/imprint.html
+++ b/imprint.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    
+    <meta name="viewport" content="width=device-width">
+
     <title>Imprint</title>
 
     <link rel="stylesheet" href="stylesheets/reset.css">
