--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="right">
       <section class="intro">
-        <h1>i'm a software engineer who wants to create and improve awesome things.</h1>
+        <h1>i'm a software engineer who is thrilled to create awesome digital experiences.</h1>
       </section>
 
       <section>
