--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
 
       <div class="menu">
-        <!-- <h2><a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a></h2> -->
-        <h2><a href="data/CV_ThomasPaulMann.pdf">cv</a></h2>
+        <h2><a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a></h2>
+        <!-- <h2><a href="data/CV_ThomasPaulMann.pdf">cv</a></h2> -->
       </div>
     </div>
 
