--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
 
     <div class="right">
       <section class="intro">
-        <h1>i'm a software engineer who is thrilled to create awesome digital experiences.</h1>
+        <h1>i'm an engineer and bring augmented reality to our everday life.</h1>
       </section>
 
       <section>
-        <p>i've done a lot of things ranging from rapid prototyping to agile project management to designing entire apps to ship products with continuous integration to blogging and rocking great music as a dj (rip <a href="http://www.wohlwill.me">wohlwill</a>).</p>
-        <p>i'm currently hacking as a software engineer at <a href="http://www.facebook.com">facebook</a>. previously i've worked at <a href="http://www.audi.de">audi ag</a>, coded at <a href="http://www.prosiebensat1.de">prosiebensat.1 digital gmbh</a>, researched at <a href="http://www.isst.fraunhofer.de">fraunhofer institute for software and system technology</a> and sold products at <a href="http://www.apple.com">apple retail</a>.</p>
-        <p>i've founded <a href="http://pfiffundweg.de">pfiff & weg</a> - a social system to keep cities clean - and <a href="http://designprof.net">designprof</a> - a bundle of apps that helps people designing their business papers. furthermore i'm working on <a href="https://github.com/ProtiumLabs">protium</a> - a mobile first software architecture - and <a href="https://github.com/PowerOfEmojis">power of emojis</a> - a bundle of apps that simplifies ui with emojis.</p>
+        <p>i'm currently hacking as a software engineer for augmented reality at <a href="http://www.facebook.com">facebook</a>. previously i've worked at <a href="http://www.audi.de">audi ag</a>, coded at <a href="http://www.prosiebensat1.de">prosiebensat.1 digital gmbh</a>, researched at <a href="http://www.isst.fraunhofer.de">fraunhofer institute for software and system technology</a> and sold products at <a href="http://www.apple.com">apple retail</a>.</p>
+        <p>i've founded <a href="http://pfiffundweg.de">pfiff & weg</a>, a social system to keep cities clean and <a href="http://designprof.net">designprof</a>, a bundle of apps that helps people designing their business papers.</p>
         <p>feel free to say <a href="mailto:hi@thomaspaulmann.com?Subject=Hi">hi</a>, fork my <a href="https://github.com/thomaspaulmann">code</a>, share my <a href="https://twitter.com/thomaspaulmann">news</a> and like my <a href="https://www.instagram.com/thomaspaulmann/">photos</a>.</p>
       </section>
 
